menu fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ nav {
     position: fixed;
     right: 20px;
     top: 20px;
-    z-index: (2);
+    z-index: 2;
 }
 
 .menu {
@@ -41,7 +41,7 @@ nav {
     width: 100%;
     height: 100vh;
     position: relative;
-    z-index: (1);
+    z-index: 1;
 }
 
 .img-shoe {
